--- a/src/style.css
+++ b/src/style.css
@@ -24,9 +24,20 @@
 }
 
 .toolbar-container {
-    border: solid 1px #888888;
+    border-style: solid;
+    border-color: #888888;
+    border-width: 0px 0px 1px 0px;
     margin-bottom: -1px;
     background-color: #cccccc;
     padding: 2px;
+}
+
+.puzzle-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.puzzle-container-wrapper {
     display: inline-block;
+    border: solid 1px #444444;
 }
