Add NumberlinkField, support showing clue numbers

--- a/src/style.css
+++ b/src/style.css
@@ -40,3 +40,12 @@
     display: inline-block;
     border: solid 1px #444444;
 }
+
+.puzzle-text {
+    cursor: default;
+    -ms-user-select: none;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
